consider branching this one; might have ruined some styles

--- a/app/views/includes/quotes.jade
+++ b/app/views/includes/quotes.jade
@@ -1,12 +1,12 @@
 .reviews-headshots-wrapper
   #reviews.reviews
-    .review.ct(style='background: url(images/quote0.jpg); background-size: cover; background-position: center center;')
+    .review.ct(style='background: url(images/hs-lg-0.jpg); background-size: cover; background-position: center center;')
       .quote
         p
           | “Sun Ray Pools took great care of us.”
         h6 Robert Smith, Rowlett
         a
-          i.fa.fa-picture-o
+          i.fa.fa-commenting-o
   #img-preload
   .quotes-wrapper(style='margin-top: -50px')
     .quotes
@@ -15,24 +15,24 @@
           .quote
             span
               a
-                img(src='images/headshot01.jpg')
+                img(src='images/hs-sm-0.jpg')
         li#quote1.quo-li
           .quote
             span
               a
-                img(src='images/headshot02.jpg')
+                img(src='images/hs-sm-1.jpg')
         li#quote2.quo-li
           .quote
             span
               a
-                img(src='images/headshot03.jpg')
+                img(src='images/hs-sm-2.jpg')
         li#quote3.quo-li
           .quote
             span
               a
-                img(src='images/headshot04.jpg')
+                img(src='images/hs-sm-3.jpg')
         li#quote4.quo-li
           .quote
             span
               a
-                img(src='images/headshot05.jpg')
+                img(src='images/hs-sm-4.jpg')
