--- a/public/css/partials/_block.scss
+++ b/public/css/partials/_block.scss
@@ -47,10 +47,10 @@
   		width: 100%;
   		color: white;
   	&:hover {
-			background-color: $accentLightTrans;
+			background-color: $accentTransLight;
   	}
   	&.active {
-  		background-color: $accentLightTrans;
+  		background-color: $accentTrans;
   		text-decoration: none;
   	}
   }
@@ -106,6 +106,30 @@
 		left: 0;
 	}
 }
+#hero-ul {
+	a {
+		position: relative;
+		font-family: $sans;
+	}
+	a.active:after {
+		content: '';
+		border-radius: 0!important;
+		bottom: 0;
+		background: 0 0!important;
+		border-color: transparent transparent #fff;
+		border-style: solid;
+		border-width: 0 10px 10px;
+		display: inline-block;
+		margin-bottom: -21px;
+		margin-left: -5px;
+		top: auto;
+		position: absolute;
+		left: 48%;
+	}
+	a.no-after:after{display: none;}
+}
+
+
 
 .form-wrapper {
 	position: relative;
@@ -198,7 +222,7 @@
 }
 
 .img-banner-sm {
-	background: $green;
+	background: $accent;
 	min-width: 47.5%;
 	max-width: 47.5%;
 	float: right;
@@ -224,9 +248,10 @@
 		font-size: 13px;
 		margin-bottom: 0;
 	} a {
-		color: $main;
+		color: $accent;
+		font-family: $sansSemibold;
 		&:hover {
-			color: $mainHover;
+			color: $accentBright;
 		}
 	}
 }
@@ -285,7 +310,7 @@
   width: 100%;
   height: 55px;
   color: #000;
-	background: $mainTrans;
+	background: $accent;
 }
 .img-after h3 {
 	margin: 0 auto;
@@ -333,7 +358,7 @@
 	display: flex;
 	justify-content: space-around;
   li a {
-	  color: $mainLight;
+	  color: $neutralDark;
   } li:hover a {
   	color: $accentBright;
   }
@@ -478,12 +503,13 @@
 }
 .nav-map-li {
 	list-style-type: none;
-	padding-top: 1rem;
-	font-size: 1.15em;
+	padding-top: 1.25rem;
+	font-size: 1.25em;
 	padding-left: 12px;
 	padding-right: 12px;
 	a {
-		color: $darkGrey;
+		color: $main;
+		font-family: $sans;
 	}
 	a:hover {
 		color: $accentBright;
@@ -706,20 +732,23 @@ span.btn-inner-wrapper {
 		font-family: $sansLightItal;
 		font-size: 2.4em;
 		line-height: 1.6;
-		letter-spacing: 0.02em;
+    text-shadow: 0 0 4px black;
 		color: #fff;
 	}	h6 {
 		font: 1.1em $serifBold;
     text-transform: uppercase;
-    color: $midGrey;
+    color: #fff;
     letter-spacing: 0.15em;
     margin-top: 3em;
+    text-shadow: 0 0 4px black;
 	} i {
-			font-size: 3em;
-			margin-top: 0.8em;
-			color: #fff;
+		font-size: 3em;
+		margin-top: 0.8em;
+		color: #fff;
+		text-shadow: 0 0 4px black;
 		&:hover {
-			color: $main;
+			color: $accentBright;
+			// text-shadow: none;
 		}
 	}
 }
@@ -1047,6 +1076,7 @@ li.active  {
 .mobile-menu:before {
 	content: "\2630";
 	color: $main;
+	line-height: 1.65;
 	font-size: 3.3rem;
 }
 .mobile-menu {
