--- a/public/css/partials/_landing.scss
+++ b/public/css/partials/_landing.scss
@@ -180,14 +180,17 @@ ul.secondary-nav{
 
 li.sub-nav-item {
 	a {
-		font-size: 15px;
+		font-size: 16px;
+		line-height: 1.5;
 		padding: 14px 10px;
-		color: $darkGrey;
-	} a:hover{
+		color: $main;
+		font-family: $sans;
+	} a.item-selected {
+		color: $accent;
+		font-family: $sansSemibold;
+	}
+	a:hover {
 		color:$accent;
-	} &.item-selected a{
-		color: $accent !important;
-		font-family: $sansBold;
 	}
 }
 
