added locals.js for app.locals variables outside env config in express.js

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,20 +1,10 @@
 #footer.footer.row
 	.footer-top
 		ul.footer-ul
-			li.footer-li
-				a(href='#')  Home 
-			li.footer-li
-				a.smoothScroll(href='#featured-categories')  Pools 
-			li.footer-li
-				a.smoothScroll(href='#reviews')  Testimonials 
-			li.footer-li
-				a.smoothScroll(href='#featured-categories')  Projects 
-			li.footer-li
-				a.smoothScroll(href='#resources2')  Resources 
-			li.footer-li
-				a.smoothScroll(href='#resources')  About Us 
-			li.footer-li
-				a(href='#open-modal')  Get a Quote 
+			each val, index in footerUl
+				li.footer-li
+					a(href='/#{val}') #{index}
+
 	hr(style='border-color: #666')
 	.footer-bottom
 		.copyright
