--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -7,5 +7,6 @@ body
 		include ./includes/features
 		include ./includes/info
 		include ./includes/quotes
+		include ./includes/info
 		include ./includes/partners
 		include ./includes/foot
