--- a/app/views/landing.jade
+++ b/app/views/landing.jade
@@ -5,3 +5,5 @@ body
 		include ./includes/nav
 		include ./includes/cta
 		include ./includes/info
+		include ./includes/partners
+		include ./includes/foot
