--- a/public/css/main.css
+++ b/public/css/main.css
@@ -536,7 +536,7 @@
   position: relative; }
   @media all and (max-width: 640px) {
     .mainImg {
-      height: 640px; } }
+      height: 680px; } }
 
 .trapezoid {
   font-family: "Gotham-Book", sans-serif;
@@ -586,7 +586,7 @@ div.trapezoid-wrapper {
   max-width: 1200px; }
   @media all and (max-width: 640px) {
     .landing-overlay {
-      height: 320px;
+      height: 360px;
       padding-top: 10px; } }
 
 div.overlay-content {
@@ -671,7 +671,7 @@ div.landing-details {
     margin-left: 100px; }
   div.landing-details a:hover {
     color: #e25440; }
-  @media all and (max-width: 640px) {
+  @media all and (max-width: 767px) {
     div.landing-details {
       display: none !important; } }
 
@@ -1130,7 +1130,10 @@ input {
 
 .footer-ul {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  flex-wrap: wrap; }
+  .footer-ul li {
+    margin: 0 15px; }
   .footer-ul li a {
     color: #939da5; }
   .footer-ul li:hover a {
@@ -1623,8 +1626,9 @@ li.active .headshot img {
   font-weight: normal; }
 
 .post-meta {
-  font-size: 12px;
-  text-transform: uppercase; }
+  font-size: 13px;
+  text-transform: uppercase;
+  font-family: "Gotham-Light", sans-serif; }
 
 .meta-type.story-type:before {
   content: "\f040"; }
