--- a/public/css/partials/_block.scss
+++ b/public/css/partials/_block.scss
@@ -215,12 +215,6 @@
 	padding-bottom: 100px;
 }
 
-.resource-wrapper-sm {
-}
-
-.img-wrapper-sm {
-}
-
 .img-banner-sm {
 	background: $accent;
 	min-width: 47.5%;
@@ -310,7 +304,7 @@
   width: 100%;
   height: 55px;
   color: #000;
-	background: $accent;
+	background: $accentTrans;
 }
 .img-after h3 {
 	margin: 0 auto;
