--- a/public/css/main.css
+++ b/public/css/main.css
@@ -762,6 +762,50 @@ div.contact-us-btn {
     width: 100%;
     line-height: 1.5; }
 
+.spotlight-bg {
+  background: url(../images/spotlight0.jpg);
+  background-size: cover;
+  background-position: center center;
+  min-height: 400px;
+  margin: 0 auto;
+  padding: 0; }
+
+.spotlight-head {
+  position: relative;
+  background: rgba(25, 52, 93, 0.4);
+  height: 400px; }
+  .spotlight-head h1 {
+    margin-top: 0;
+    padding-top: 120px;
+    font-size: 1.25em;
+    text-transform: uppercase; }
+  .spotlight-head h2 {
+    font-size: 2.5em;
+    font-family: "Gotham-Light", sans-serif;
+    display: inline-block;
+    margin-top: 0;
+    padding: 15px 0;
+    border-bottom: 1px solid white; }
+  .spotlight-head p {
+    padding-top: 18px;
+    font-size: 1.2em; }
+
+.showcase-wrapper {
+  max-width: 1200px;
+  background: red;
+  margin: 0 auto; }
+  .showcase-wrapper h2 {
+    margin: 0; }
+
+.showcase {
+  margin-top: -60px;
+  display: flex; }
+
+.showcase-item {
+  width: 33%;
+  text-align: center;
+  background: purple; }
+
 span.carousel-btn {
   font-size: 30px;
   color: #ddd;
