--- a/app/views/includes/quotes.jade
+++ b/app/views/includes/quotes.jade
@@ -1,12 +1,13 @@
 .reviews-headshots-wrapper
   #reviews.reviews
     .review.ct(style='background: url(images/hs-lg-0.jpg); background-size: cover; background-position: center center;')
-      .quote
-        p
-          | “Sun Ray Pools took great care of us.”
-        h6 Robert Smith, Rowlett
-        a
-          i.fa.fa-commenting-o
+      .review-overlay
+        .quote
+          p
+            | “Sun Ray Pools took great care of us.”
+          h6 Robert Smith, Rowlett
+          a
+            i.fa.fa-commenting-o
   #img-preload
   .quotes-wrapper(style='margin-top: -50px')
     .quotes
