--- a/public/css/partials/_block.scss
+++ b/public/css/partials/_block.scss
@@ -1135,6 +1135,7 @@ div.quote {
 		border-radius: 50%;
 		border: 2px solid #fff;
 		transition: all 0.3s ease;
+		cursor: pointer;
 	} a:hover {
 		img {
 			height: 100px;
