--- a/app/views/error.jade
+++ b/app/views/error.jade
@@ -1,6 +1,7 @@
-//- extends ./includes/layout
+include ./includes/layout
 
-//- body
-//-   h1= message
-//-   h2= error.status
-//-   pre #{error.stack}
+body
+  h1.err= message
+  h2.err= error.status
+  //- turn err msg on/off depending on env
+  //- pre #{error.stack}
